<resources>
    <string name="app_name">THP101_TEAM1_BagChance</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="txtSignUp">註冊</string>
    <string name="txtLogin">登入</string>
    <string name="txtGoogleLogin">使用Google登入</string>
    <string name="txtFacebookLogin">使用Facebook登入</string>
    <string name="txtOK">確認</string>
    <string name="txtForgetPassword">忘記密碼 ?</string>
    <string name="txtPassword">密碼</string>
    <string name="txtPhone">手機號碼</string>
    <string name="txtInputPhone">請輸入手機號碼</string>
    <string name="txtInputPassword">請輸入密碼</string>

    <string name="txtExplore">探索</string>
    <string name="txtChat">聊天</string>
    <string name="txtPost">貼文</string>
    <string name="txtPremium">升級</string>
    <string name="txtProfile">個人</string>
    <string name="txtSetting">設定</string>
    <string name="txtShopping">購物</string>
    <string name="txtEmail">Email</string>
    <string name="txtConfirmPassword">再次確認密碼</string>
    <string name="txtInputEmail">請輸入信箱</string>
    <string name="txtInputConfirmPassword">請再次輸入密碼</string>
    <string name="txtGetVerificationCode">取得驗證碼</string>
    <string name="txtVerificationCode">驗證碼</string>
    <string name="txtInputVerificationCode">請輸入驗證碼</string>
    <string name="txtResetPassword">重設密碼</string>
    <string name="txtNewPassword">新密碼</string>
    <string name="txtInputNewPassword">請輸入新密碼</string>
    <string name="txtConfirmNewPassword">再次確認新密碼</string>
    <string name="txtInputConfirmNewPassword">請再次輸入新密碼</string>
    <string name="txtPersonalInformation">個人資料</string>
    <string name="txtNickname">暱稱</string>
    <string name="txtBirthday">生日</string>
    <string name="txtGender">性別</string>
    <string name="txtArea">地區</string>
    <string name="txtdialog_title_notify">通知</string>
    <string name="txtdialog_message_loginresetpassword">重設密碼成功</string>
    <string name="txtdialog_positive_button">確認</string>
    <string name="txtdialog_message_loginsignup_true">註冊成功</string>
    <string name="txtdialog_message_loginsignup_false">註冊失敗</string>
    <string name="txtdialog_message_loginlogin">信箱或密碼錯誤</string>

    <string name="txtqueryHint">請輸入好友姓名</string>
    <string name="txtcamera">相機</string>
    <string name="txtalbum">相簿</string>
    <string name="txtrecording">請授權錄音</string>
    <string name="txtyes">前往</string>
    <string name="txtno">拒絕</string>
    <string name="txtCancel">取消</string>
    <string name="txtauthorized">請求授權</string>
    <string name="txtrequestauthorization">我們需要您的授權才能錄音</string>
    <string name="txtsendpic">對您傳送了圖片</string>
    <string name="txtmesendpic">您傳送了圖片</string>
    <string name="txtsendrecording">對您傳送了錄音</string>
    <string name="txtmesendrecording">您傳送了錄音</string>


    <string name="txtMyLocation_Post">我的位置</string>
    <string name="txtWait_Post">稍等一下...</string>
    <string name="txterrLocationNotFound_Post">無法取得目前位置</string>
    <string name="txterrLocationAccessNotGrant_Post">尚未同意取得目前位置</string>


</resources>