<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/exploreMainFragment"
        android:icon="@drawable/ic_explore"
        android:title="@string/txtExplore" />

    <item
        android:id="@+id/chatMainFragment"
        android:icon="@drawable/ic_chat"
        android:title="@string/txtChat" />

    <item
        android:id="@+id/postChooseFragment"
        android:icon="@drawable/ic_newpost"
        android:title="@string/txtPost" />

    <item
        android:id="@+id/cartMainFragment"
        android:icon="@drawable/ic_vip"
        android:title="@string/txtPremium" />

    <item
        android:id="@+id/meMainFragment"
        android:icon="@drawable/ic_me"
        android:title="@string/txtProfile" />

</menu>