<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".controller.login.LoginForgetPasswordFragment">

    <data>
        <variable
            name="viewModel"
            type="com.example.thp101_team1_bagchance.viewmodel.login.LoginForgetPasswordViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView15"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="24dp"
            android:gravity="center"
            android:text="@string/txtForgetPassword"
            android:textColor="#35919D"
            android:textSize="24.88sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:text="@string/txtPhone"
            android:textColor="#000000"
            android:textSize="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView15" />

        <EditText
            android:id="@+id/etPhone_LoginForgetPassword"
            android:layout_width="200dp"
            android:layout_height="48dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="2dp"
            android:background="@drawable/texttype"
            android:ems="10"
            android:hint="@string/txtInputPhone"
            android:inputType="phone"
            android:padding="10dp"
            android:text="@={viewModel.phone}"
            android:textSize="14dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView16" />

        <Button
            android:id="@+id/btVerificationCode_LoginForgetPassword"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/loginmainloginbutton"
            android:text="@string/txtGetVerificationCode"
            android:textSize="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/etPhone_LoginForgetPassword"
            app:layout_constraintTop_toTopOf="@+id/etPhone_LoginForgetPassword" />

        <TextView
            android:id="@+id/textView17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:text="@string/txtVerificationCode"
            android:textColor="#000000"
            android:textSize="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etPhone_LoginForgetPassword" />

        <EditText
            android:id="@+id/etVerificationCode_LoginForgetPassword"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/texttype"
            android:ems="10"
            android:hint="@string/txtInputVerificationCode"
            android:inputType="textPersonName"
            android:padding="10dp"
            android:text="@={viewModel.verificationcode}"
            android:textSize="14dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView17" />

        <Button
            android:id="@+id/btOK_LoginForgetPassword"
            android:layout_width="168dp"
            android:layout_height="48dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/okbutton"
            android:text="@string/txtOK"
            android:textColor="#FFFFFF"
            android:textSize="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etVerificationCode_LoginForgetPassword" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@drawable/ba43124134"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btPreviousPage_LoginForgetPassword"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/previousbutton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>